<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:gravity="center"
        android:padding="6dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new_category"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/et_category_title_new_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/category_title"
            android:inputType="textCapWords" />

        <CheckBox
            android:id="@+id/category_checkbox"
            android:text="@string/checkbox_catagory"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_marginTop="16dp"
            android:id="@+id/layout_audio_new_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/audioCard"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="8dp">

                <LinearLayout
                    android:id="@+id/layout_add_audio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/ib_layout_audio_new_category"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:padding="8dp"
                        android:src="@drawable/ic_audio" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_audio" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v4.widget.Space
                android:layout_width="8dp"
                android:layout_height="match_parent" />

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="8dp">

                <LinearLayout
                    android:id="@+id/layout_add_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/iv_select_image"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:padding="8dp"
                        android:src="@drawable/ic_image_capture" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_image" />
                </LinearLayout>

            </android.support.v7.widget.CardView>


        </LinearLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_photo_preview"
                android:padding="16dp"
                android:src="@drawable/foode"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:adjustViewBounds="true"
                android:scaleType="center" />
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:visibility="gone"
                android:id="@+id/tv_audio_file"
                android:drawablePadding="5dp"
                android:drawableLeft="@drawable/audio_file"
                android:textSize="15sp"
                android:padding="10dp"
                android:text="File.mp3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>
        </android.support.v7.widget.CardView>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:background="@drawable/button_primary_blue"
                android:textColor="@color/white"
                android:id="@+id/btn_cancel_new_category"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/cancel" />

            <android.support.v4.widget.Space
                android:layout_width="8dp"
                android:layout_height="wrap_content" />

            <Button
                android:background="@drawable/button_primary_blue"
                android:textColor="@color/white"
                android:id="@+id/btn_add_new_category"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/save" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>