<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:ignore="MissingPrefix">

    <TextView
        fontPath="fonts/arista.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_image"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="24dp"
        android:textSize="24sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            app:cardElevation="4dp">

            <LinearLayout
                android:id="@+id/btnUploadFromGallery"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="60dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/photo_library" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="5dp"
                    android:text="@string/album"
                    android:textSize="20sp" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            app:cardElevation="4dp">

            <LinearLayout
                android:id="@+id/btnTakePhotoFromCamera"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="60dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_image_capture" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/camera"
                    android:textSize="20sp" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>




</LinearLayout>
